force-app/main/default/objects/Accounting_Code__c/Accounting_Code__c.object-meta.xml
<CustomObject>
    <description>Unique identifiers used by AARP financial systems.</description>
    <label>Accounting Code</label>
    <nameField>
        <label>Accounting Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>