force-app/main/default/objects/Accounting_Code__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <description>Master-Detail to the department code object. The values on the two objects combine to form 5 code strings used by PeopleSoft for reimbursements.</description>
    <inlineHelpText>Search for and select the department code to which this accounting code is related.</inlineHelpText>
    <label>Department Code</label>
    <referenceTo>Department_Code__c</referenceTo>
    <relationshipLabel>Accounting Codes</relationshipLabel>
    <relationshipName>Accounting_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>