force-app/main/default/objects/Accounting_Code__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>Captures the expense type used by PeopleSoft for reimbursements.</description>
    <inlineHelpText>Select the expense type associated with this accounting code.</inlineHelpText>
    <label>Expense Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>