force-app/main/default/objects/Accounting_Code__c/fields/PeopleSoft_Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Accounting_Code__c</fullName>
    <description>Captures the concatenated values of the PeopleSoft codes to create the full accounting string that would be needed by auditors.</description>
    <formula>IF( 
ISBLANK( Department_Code__r.PeopleSoft_Business_Unit_Code__c), 
Department_Code__r.PeopleSoft_Business_Unit_Code__c+ &quot;.&quot; + Department_Code__r.PeopleSoft_Department_Code__c + &quot;.&quot; + PeopleSoft_Program_Description_Code__c + &quot;.&quot; + PeopleSoft_Expense_Type_Code__c , 
Department_Code__r.PeopleSoft_Business_Unit_Code__c+ &quot;.&quot; + Department_Code__r.PeopleSoft_Department_Code__c + &quot;.&quot; + Department_Code__r.PeopleSoft_Operating_Unit_Code__c + &quot;.&quot; + PeopleSoft_Program_Description_Code__c + &quot;.&quot; + PeopleSoft_Expense_Type_Code__c 
)</formula>
    <label>PeopleSoft Accounting Code</label>
    <type>Text</type>
</CustomField>