force-app/main/default/objects/Accounting_Code__c/fields/PeopleSoft_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Expense_Type__c</fullName>
    <description>Captures the expense type value used by PeopleSoft.</description>
    <label>PeopleSoft Expense Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>