force-app/main/default/objects/Accounting_Code__c/fields/PeopleSoft_Expense_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Expense_Type_Code__c</fullName>
    <description>Captures the expense type code used by PeopleSoft.</description>
    <label>PeopleSoft Expense Type Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>