force-app/main/default/objects/Accounting_Code__c/fields/PeopleSoft_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Program_Description__c</fullName>
    <description>Captures the program description value used by PeopleSoft.</description>
    <label>PeopleSoft Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>