force-app/main/default/objects/Accounting_Code__c/fields/PeopleSoft_Program_Description_Code__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft_Program_Description_Code__c</fullName>
    <description>Captures the program description code used by PeopleSoft.</description>
    <label>PeopleSoft Program Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>