force-app/main/default/objects/Accounting_Code__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <description>Captures the program description value used by PeopleSoft for reimbursements.</description>
    <inlineHelpText>Select the PeopleSoft program description associated with this accounting code.</inlineHelpText>
    <label>Business Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>