force-app/main/default/objects/Accounting_Code__c/listViews/All_Accounting_Codes.listView-meta.xml
<ListView>
    <fullName>All_Accounting_Codes</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounting Codes</label>
</ListView>